<resources>
    <string name="app_name">Simplex Mobile</string>
    <string name="local">"/sdcard/Android/data/com.ntecprograms.simplexmobile/files/Documents/"</string>

    // activity_main
    <string name="new_project">Novo projeto</string>
    <string name="open_project">Abrir projeto</string>
    <string name="info">Informações</string>

    // activity_linear
    <string name="txt_click">Clique aqui para adicionar</string>
    <string name="txt_variables">Variáveis</string>
    <string name="txt_restr">Restrições</string>
    <string name="bt_calcular">Calcular</string>

    // Calcular
    <string name="txt_best">Melhor resultado</string>
    <string name="txt_table">Tabela de algoritmos e soluções</string>
    <string name="algorithm">"Algoritmo "</string>
    <string name="solution">"Solução "</string>
    <string name="txt_vb">"\nVariáveis básicas:"</string>
    <string name="txt_vn">"\nVariáveis não básicas:"</string>
    <string name="txt_valor">"\nValor de Z:"</string>

    // Toasts
    <string name="error_unknown">ERRO DESCONHECIDO</string>
    <string name="save_error">Erro ao salvar</string>
    <string name="save_success">Salvo com sucesso</string>
    <string name="del_success">Excluido com sucesso</string>
    <string name="add_restr">Adicione uma restrição e de OK antes de salvar!</string>
    <string name="index_used">Index já utilizado!</string>
    <string name="rest_error">Impossível editar ou remover restrições de não negatividade</string>
    <string name="calc_error">Adicione variáveis e restrições antes!</string>

    // AlertDialogs
    <string name="title_restr">Restrição:</string>
    <string name="title_del">Tem certeza que deseja excluir:</string>
    <string name="bt_del">Excluir</string>
    <string name="bt_edit">Editar</string>
    <string name="bt_cancel">Cancelar</string>

    // Menus
    <string name="save">Salvar</string>
    <string name="help">Ajuda</string>
    <string name="back">Voltar</string>
    <string name="exit">Sair</string>

    // Outros
    <string name="new_restr">Nova restrição</string>
    <string name="save_project">Salvar projeto</string>
    <string name="open">Abrir</string>
    <string name="name">Nome do arquivo:</string>
    <string name="select">Selecione</string>
    <string name="no_projects">Nenhum projeto salvo</string>

    <string name="help_text">"
        - Clique em 'FOMax(Z)' para adicionar a função de maximização de Z;\n
        - Segure pressionado a restrição para poder edita-la ou exclui-la;\n
        - Digite a quantidade e depois aperte em Xn para adicionar o X;\n
        - Na adição do FOMax(Z), os index dos X serão acrescentados automaticamente;\n
        - Use o + ou o - para mudar entre numeros positivos ou negativos;\n
        - Use 'C' para apagar as formulas completas e 'Del' para apagar apenas o ultimo valor;\n
        - Adicione a formula do 'FOMax(Z)' igual está no problema, só iguale a função SE ela conter constantes;\n
        - Clique em 'Calcular' para gerar os algoritmos e as soluções do problema, obtendo-se melhor resuldado;\n
        - Salve o arquivo com o mesmo nome para substitui-lo\n
        - Segure pressionado o nome do arquivo em 'Abrir projeto' para poder exclui-lo;\n
        "</string>

</resources>
